@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.CategoryFragment {
          + getLayoutId()
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.FavoriteFragment {
          + getLayoutId()
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.HomePageFragment {
          + getLayoutId()
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.ProfileFragment {
          + getLayoutId()
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.RecommendFragment {
          + getLayoutId()
      }
    }
  }
  

  com.example.asproj.fragment.CategoryFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.FavoriteFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.HomePageFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.ProfileFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.RecommendFragment -up-|> com.example.common.uicomponent.HiBaseFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
